# pciutils

./: .gitignore  CMakeLists.txt  config.h.in  config.mk  pciutils_config.cmake  pciutils_config.h.in
cmake/: pciconfig.cmake
lib/: CMakeLists.txt  Makefile
libpci/: CMakeLists.txt
